# wildfire-uncertainty-gnn

./: .gitignore  06_feature_engineering_validation.py  Dilrabo-Khidirova-Demo-Slide.pptx  LICENSE  README.md  Uncertainty-Calibrated Graph Neural Networks for Wildfire Spread Prediction.pptx  dem_features.py  environment.yml  feature_config.yaml  feature_engineering.py  feature_transforms.py  phase5_4_rebuild.py  prepare_features.py  pyproject.toml
configs/: baseline_config.yaml  cnn_baseline_config.yaml  data_config.yaml  feature_config.yaml  gat_config.yaml  gnn_config.yaml  gnn_config_gat.yaml  gnn_config_gat_uncertainty.yaml  gnn_config_graphsage.yaml  model_config.yaml  train_config.yaml
data/features/: correlation_report.csv  df_test_features.parquet  df_val_features.parquet  feature_names.json  splits_phase54.npz  target_transformer.pkl
notebooks/: 01_dataset_exploration.ipynb  02_graph_construction.ipynb  03_baseline_models.ipynb  03b_cnn_baseline.ipynb  04_gat_experiments.ipynb  04_gnn_experiments.ipynb  04a_feature.analysis.ipynb  04b_gnn_experiments.ipynb  05.4_Phase.ipynb  05_uncertainty_calibration_analysis.ipynb
reports/tables/: ablation_all_features_training_history.csv  ablation_coordinates_only_bin_metrics.csv  ablation_coordinates_only_metrics.csv  (+43 more)
scripts/: build_graphs.py  calibrate_gnn.py  evaluate_gnn.py  preprocess_data.py  run_baselines.py  run_cnn_baseline.py  run_gat_abliation.py  run_gnn_experiements.py  run_gnn_experim.py  run_gnn_experiments.py  run_gnn_matrix.py  run_intervention.py  train_gnn.py
tests/: test_preprocessing.py
(+56 files in other folders)
